Fix spacing. Change h2 tag to h3 for better accessability

--- a/styles.less
+++ b/styles.less
@@ -189,7 +189,7 @@ fieldset {
 .container {
 	text-align: left;
 	display: grid;
-	gap: @sp-1;
+	gap: 2rem;
 
 	@media (min-width: 48rem) {
 		width: 33.75rem;
@@ -230,7 +230,8 @@ fieldset {
 
 	.settings {
 		background-color: @gray-800;
-		.inner-space-1();
+		gap: @sp-1;
+		padding: clamp(0rem, 2.2vw, 2rem) 2rem;
 		display: grid;
 		.settings__char-slider {
 			.inner-space-1();
